bg img not found error fixed

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -1,6 +1,6 @@
 .home{
     .banner{
-        background-image: url(/assets/img/banner.jpg?20220212-001);
+        background-image: url(../img/banner.jpg?20220212-001);
         background-repeat: no-repeat;
         background-size: contain;
         height: 626px;
