--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,4 +41,21 @@
   max-width: 100%;
   height: 169px;
 }
+
+.home .video-section .youtube .video .no-video {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 169px;
+  border: 1px solid #ccc;
+}
+
+.home .video-section .youtube .video .no-video span {
+  display: block;
+  width: 100%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  text-align: center;
+}
 /*# sourceMappingURL=style.css.map */
