--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -1,8 +1,4 @@
 .header{
-    background: #d701f9;
-    .navbar{
-        a{
-            color: white;
-        }
-    }
+    // background: #d701f9;
+    border-bottom: 1px solid #ccc;
 }
