--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+[v-cloak] {
+  display: none;
+}
+
 .header {
   border-bottom: 1px solid #ccc;
 }
@@ -89,7 +93,7 @@
   }
   .premier-league .video-section .youtube .video > iframe {
     width: 100%;
-    height: 232px;
+    height: 232px !important;
   }
 }
 
