--- a/assets/scss/_premier-league.scss
+++ b/assets/scss/_premier-league.scss
@@ -93,7 +93,7 @@
                 .video{
                     > iframe{
                         width: 100%;
-                        height: 232px;
+                        height: 232px !important;
                     }
                 }
             }
